force-app/main/default/objects/Eldor__c/Eldor__c.object-meta.xml
<CustomObject>
    <label>Eldor</label>
    <nameField>
        <label>Eldor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eldors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>