force-app/main/default/objects/Eldor__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>123</length>
    <type>Text</type>
</CustomField>