force-app/main/default/objects/Eldor__c/fields/plays__c.field-meta.xml
<CustomField>
    <fullName>plays__c</fullName>
    <label>plays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>